src/tests/fixtures/unions/UnionAsMemberOfItself.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  me: Actor;
}

/** @gqlType */
class User {
  __typename = "User";
  /** @gqlField */
  name: string;
}

/** @gqlType */
class Entity {
  __typename = "Entity";
  /** @gqlField */
  description: string;
}

/** @gqlUnion */
type Actor = User | Entity | Actor;

-----------------
OUTPUT
-----------------
src/tests/fixtures/unions/UnionAsMemberOfItself.invalid.ts:22:30 - error: Union type Actor can only include Object types, it cannot include Actor.

22 type Actor = User | Entity | Actor;
                                ~~~~~
